// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Tags should render Tags with integers mode 1`] = `
<Fragment>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-4-menu"
    className="container mg-light"
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="combobox"
  >
    <div
      className="tag"
      key="123"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      123
    </div>
    <div
      className="tag"
      key="456"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      456
    </div>
    <AutosizeInput
      aria-autocomplete="list"
      aria-controls="downshift-4-menu"
      aria-labelledby="downshift-4-label"
      autoComplete="off"
      className="inputContainer"
      id="downshift-4-input"
      injectStyles={true}
      inputClassName="input"
      inputRef={[Function]}
      minWidth={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      value=""
    />
  </div>
  <SimpleComposeWrapper [nonvisual:true],[view:default]
    anchor={
      Object {
        "current": null,
      }
    }
    className="suggestionsWrapper"
    direction="bottom"
    modifiers={
      Array [
        Object {
          "effect": [Function],
          "enabled": true,
          "fn": [Function],
          "name": "applyMinWidth",
          "phase": "beforeWrite",
          "requires": Array [
            "computeStyles",
          ],
        },
        Object {
          "enabled": true,
          "fn": [Function],
          "name": "applyMaxHeight",
          "phase": "main",
          "requires": Array [
            "computeStyles",
          ],
        },
      ]
    }
    scope="inplace"
    target="anchor"
    view="default"
    visible={false}
    zIndex={100}
  >
    <ul
      aria-labelledby="downshift-4-label"
      className="suggestions"
      id="downshift-4-menu"
      onMouseLeave={[Function]}
      role="listbox"
    />
  </SimpleComposeWrapper [nonvisual:true],[view:default]>
</Fragment>
`;

exports[`UI/Tags should render Tags with long-integers mode 1`] = `
<Fragment>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-2-menu"
    className="container mg-light"
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="combobox"
  >
    <div
      className="tag"
      key="11111111111111111111111"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      11111111111111111111111
    </div>
    <div
      className="tag"
      key="2222222222222222222222"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      2222222222222222222222
    </div>
    <AutosizeInput
      aria-autocomplete="list"
      aria-controls="downshift-2-menu"
      aria-labelledby="downshift-2-label"
      autoComplete="off"
      className="inputContainer"
      id="downshift-2-input"
      injectStyles={true}
      inputClassName="input"
      inputRef={[Function]}
      minWidth={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      value=""
    />
  </div>
  <SimpleComposeWrapper [nonvisual:true],[view:default]
    anchor={
      Object {
        "current": null,
      }
    }
    className="suggestionsWrapper"
    direction="bottom"
    modifiers={
      Array [
        Object {
          "effect": [Function],
          "enabled": true,
          "fn": [Function],
          "name": "applyMinWidth",
          "phase": "beforeWrite",
          "requires": Array [
            "computeStyles",
          ],
        },
        Object {
          "enabled": true,
          "fn": [Function],
          "name": "applyMaxHeight",
          "phase": "main",
          "requires": Array [
            "computeStyles",
          ],
        },
      ]
    }
    scope="inplace"
    target="anchor"
    view="default"
    visible={false}
    zIndex={100}
  >
    <ul
      aria-labelledby="downshift-2-label"
      className="suggestions"
      id="downshift-2-menu"
      onMouseLeave={[Function]}
      role="listbox"
    />
  </SimpleComposeWrapper [nonvisual:true],[view:default]>
</Fragment>
`;

exports[`UI/Tags should render Tags with options only 1`] = `
<Fragment>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-1-menu"
    className="container mg-light"
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="combobox"
  >
    <div
      className="tag"
      key="string"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      string
      <button
        aria-label="Remove"
        className="clear"
        onClick={[Function]}
        type="button"
      >
        ×
      </button>
    </div>
    <div
      className="tag"
      key="123"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      123
      <button
        aria-label="Remove"
        className="clear"
        onClick={[Function]}
        type="button"
      >
        ×
      </button>
    </div>
    <AutosizeInput
      aria-autocomplete="list"
      aria-controls="downshift-1-menu"
      aria-labelledby="downshift-1-label"
      autoComplete="off"
      className="inputContainer"
      id="downshift-1-input"
      injectStyles={true}
      inputClassName="input"
      inputRef={[Function]}
      minWidth={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      value=""
    />
    <button
      aria-label="Remove all"
      className="clear commonClear"
      onClick={[Function]}
      type="button"
    >
      <IconCloseFilled
        style={
          Object {
            "fill": "#b2b2b2",
          }
        }
      />
    </button>
  </div>
  <SimpleComposeWrapper [nonvisual:true],[view:default]
    anchor={
      Object {
        "current": null,
      }
    }
    className="suggestionsWrapper"
    direction="bottom"
    modifiers={
      Array [
        Object {
          "effect": [Function],
          "enabled": true,
          "fn": [Function],
          "name": "applyMinWidth",
          "phase": "beforeWrite",
          "requires": Array [
            "computeStyles",
          ],
        },
        Object {
          "enabled": true,
          "fn": [Function],
          "name": "applyMaxHeight",
          "phase": "main",
          "requires": Array [
            "computeStyles",
          ],
        },
      ]
    }
    scope="inplace"
    target="anchor"
    view="default"
    visible={false}
    zIndex={100}
  >
    <ul
      aria-labelledby="downshift-1-label"
      className="suggestions"
      id="downshift-1-menu"
      onMouseLeave={[Function]}
      role="listbox"
    />
  </SimpleComposeWrapper [nonvisual:true],[view:default]>
</Fragment>
`;

exports[`UI/Tags should render Tags with specified icon 1`] = `
<Fragment>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-5-menu"
    className="container mg-light"
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="combobox"
  >
    <AutosizeInput
      aria-autocomplete="list"
      aria-controls="downshift-5-menu"
      aria-labelledby="downshift-5-label"
      autoComplete="off"
      className="inputContainer"
      id="downshift-5-input"
      injectStyles={true}
      inputClassName="input"
      inputRef={[Function]}
      minWidth={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      value=""
    />
  </div>
  <SimpleComposeWrapper [nonvisual:true],[view:default]
    anchor={
      Object {
        "current": null,
      }
    }
    className="suggestionsWrapper"
    direction="bottom"
    modifiers={
      Array [
        Object {
          "effect": [Function],
          "enabled": true,
          "fn": [Function],
          "name": "applyMinWidth",
          "phase": "beforeWrite",
          "requires": Array [
            "computeStyles",
          ],
        },
        Object {
          "enabled": true,
          "fn": [Function],
          "name": "applyMaxHeight",
          "phase": "main",
          "requires": Array [
            "computeStyles",
          ],
        },
      ]
    }
    scope="inplace"
    target="anchor"
    view="default"
    visible={false}
    zIndex={100}
  >
    <ul
      aria-labelledby="downshift-5-label"
      className="suggestions"
      id="downshift-5-menu"
      onMouseLeave={[Function]}
      role="listbox"
    />
  </SimpleComposeWrapper [nonvisual:true],[view:default]>
</Fragment>
`;

exports[`UI/Tags should render Tags with text mode 1`] = `
<Fragment>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-3-menu"
    className="container mg-light"
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="combobox"
  >
    <div
      className="tag"
      key="string1"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      string1
    </div>
    <div
      className="tag"
      key="string2"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      string2
    </div>
    <div
      className="tag"
      key="string3"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      string3
    </div>
    <AutosizeInput
      aria-autocomplete="list"
      aria-controls="downshift-3-menu"
      aria-labelledby="downshift-3-label"
      autoComplete="off"
      className="inputContainer"
      id="downshift-3-input"
      injectStyles={true}
      inputClassName="input"
      inputRef={[Function]}
      minWidth={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      value=""
    />
  </div>
  <SimpleComposeWrapper [nonvisual:true],[view:default]
    anchor={
      Object {
        "current": null,
      }
    }
    className="suggestionsWrapper"
    direction="bottom"
    modifiers={
      Array [
        Object {
          "effect": [Function],
          "enabled": true,
          "fn": [Function],
          "name": "applyMinWidth",
          "phase": "beforeWrite",
          "requires": Array [
            "computeStyles",
          ],
        },
        Object {
          "enabled": true,
          "fn": [Function],
          "name": "applyMaxHeight",
          "phase": "main",
          "requires": Array [
            "computeStyles",
          ],
        },
      ]
    }
    scope="inplace"
    target="anchor"
    view="default"
    visible={false}
    zIndex={100}
  >
    <ul
      aria-labelledby="downshift-3-label"
      className="suggestions"
      id="downshift-3-menu"
      onMouseLeave={[Function]}
      role="listbox"
    />
  </SimpleComposeWrapper [nonvisual:true],[view:default]>
</Fragment>
`;

exports[`UI/Tags should render default mg-light Tags 1`] = `
<Fragment>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-0-menu"
    className="container mg-light"
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="combobox"
  >
    <AutosizeInput
      aria-autocomplete="list"
      aria-controls="downshift-0-menu"
      aria-labelledby="downshift-0-label"
      autoComplete="off"
      className="inputContainer"
      id="downshift-0-input"
      injectStyles={true}
      inputClassName="input"
      inputRef={[Function]}
      minWidth={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      value=""
    />
  </div>
  <SimpleComposeWrapper [nonvisual:true],[view:default]
    anchor={
      Object {
        "current": null,
      }
    }
    className="suggestionsWrapper"
    direction="bottom"
    modifiers={
      Array [
        Object {
          "effect": [Function],
          "enabled": true,
          "fn": [Function],
          "name": "applyMinWidth",
          "phase": "beforeWrite",
          "requires": Array [
            "computeStyles",
          ],
        },
        Object {
          "enabled": true,
          "fn": [Function],
          "name": "applyMaxHeight",
          "phase": "main",
          "requires": Array [
            "computeStyles",
          ],
        },
      ]
    }
    scope="inplace"
    target="anchor"
    view="default"
    visible={false}
    zIndex={100}
  >
    <ul
      aria-labelledby="downshift-0-label"
      className="suggestions"
      id="downshift-0-menu"
      onMouseLeave={[Function]}
      role="listbox"
    />
  </SimpleComposeWrapper [nonvisual:true],[view:default]>
</Fragment>
`;
